syntax = "proto3";

package awakari.source.telegram;

option go_package = "api/grpc/source/telegram";

import "google/protobuf/timestamp.proto";

service Service {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc List(ListRequest) returns (ListResponse);

  rpc Login(LoginRequest) returns (LoginResponse);
}

message CreateRequest {
  Channel channel = 1;
}

message CreateResponse {}

message ReadRequest {
  string link = 1;
}

message ReadResponse {
  Channel channel = 1;
}

message DeleteRequest {
  string link = 1;
}

message DeleteResponse {}

message ListRequest {
  uint32 limit = 1;
  string cursor = 2;
  Filter filter = 3;
  Order order = 4;
}

enum Order {
  ASC = 0;
  DESC = 1;
}

message ListResponse {
  repeated Channel page = 1;
}

message Channel {
  int64 id = 1;
  string groupId = 2;
  string userId = 3;
  string name = 4;
  string link = 5;
  string subId = 6;
  string terms = 7;
  google.protobuf.Timestamp last = 8;
  google.protobuf.Timestamp created = 9;
}

message Filter {
  string groupId = 1;
  string userId = 2;
  string pattern = 3;
  string subId = 4;
}

message LoginRequest {
  string code = 1;
}

message LoginResponse {
  bool success = 1;
}
